objects/ccrz__E_Term__c.object
<CustomObject>
    <description>Holds each terms and condition</description>
    <fields>
        <fullName>ccrz__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <label>Locale</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <label>Storefront</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DefaultStore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Title__c</fullName>
        <description>Title of the term &amp; condition</description>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CC Term</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>ccrz__Title__c</columns>
        <columns>ccrz__Description__c</columns>
        <columns>ccrz__Locale__c</columns>
        <columns>ccrz__Type__c</columns>
        <columns>ccrz__Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>CC Term Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>